fix:picture modal blurry img

--- a/src/assets/scss/_mixin.scss
+++ b/src/assets/scss/_mixin.scss
@@ -80,15 +80,15 @@ $all: webkit moz ms o spec;
   }
 }
 
-@mixin contain-img {
-  width: 100%;
-  height: 100%;
-  background: {
-    repeat: no-repeat;
-    position: center center;
-    size: contain;
-  }
-}
+//@mixin contain-img {
+//  width: 100%;
+//  height: 100%;
+//  background: {
+//    repeat: no-repeat;
+//    position: center center;
+//    size: contain;
+//  }
+//}
 
 @mixin fill-img {
   position: absolute;
@@ -96,6 +96,14 @@ $all: webkit moz ms o spec;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@mixin contain-img {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 @mixin hr-line {
